--- a/v8.md
+++ b/v8.md
@@ -58,18 +58,10 @@ JS对象拥有一个隐藏类属性，用来存储对象的形态信息，包括
 多个拥有相同形态的对象，会指向同一个隐藏类。因为它们的属性数量相同，属性的添加顺序相同，所以每个属性对应的数据在内存中的偏移量也是相同的，因此对于这一类对象，只需要一个隐藏类就可以表示了，节省了不少内存空间。
 
 ## 内联缓存Inline Caches
-```javascript
-function foo(o) {
-  return o.x
-}
-
-foo({ x: 'aaa' })
-```
-
-如代码所示，我们定义了一个函数，用来访问对象参数中的x属性。我们传入的参数是一个对象，这个对象对应了一个隐藏类。当这段函数代码被转换成字节码时，v8会将对应的隐藏类信息以及在隐藏类中保存的该属性的位置信息(offset)存储到相关指令当中。
-后续调用到foo函数时，v8会先将这一次传入的对象的隐藏类与上次的作比较，如果两次调用的对象的隐藏类是同一个，那么就可以直接从指令中得到属性的位置信息，不用再接触对象本身，减少了属性查找的过程。
-
 ![内联缓存](https://github.com/quanshubli/blog/blob/main/images/v2-aa64bb9cd77685c2e9f299b4f9da580d_r.jpg)
+
+如图所示，我们定义了一个函数，用来访问对象参数中的x属性。我们传入的参数是一个对象，这个对象对应了一个隐藏类。当这段函数代码被转换成字节码时，v8会将对应的隐藏类信息以及在隐藏类中保存的该属性的位置信息(offset)存储到相关指令当中。
+后续调用到getX函数时，v8会先将这一次传入的对象的隐藏类与上次的作比较，如果两次调用的对象的隐藏类是同一个，那么就可以直接从指令中得到属性的位置信息，不用再接触对象本身，减少了属性查找的过程。
 
 ## 快属性Fast Properties
 
@@ -82,5 +74,7 @@ foo({ x: 'aaa' })
 # 最佳实践
 
 1.同一个函数的多次调用，尽量保持参数类型一致（减少反编译）。
+
 2.尽量以相同的方式初始化对象（使他们拥有相同的隐藏类）。
+
 3.减少对象中属性的删除操作(delete)。
