--- a/articles/javascript/原型.md
+++ b/articles/javascript/原型.md
@@ -4,16 +4,20 @@
 
 ```javascript
 function Person() {}
-console.log(Person.prototype) // {constructor: ƒ}
-console.log(Person.prototype.constructor === Person) // true
+
+console.log(Person.prototype); // {constructor: ƒ}
+
+console.log(Person.prototype.constructor === Person); // true
 ```
 
 当我们把这个函数作为构造函数，来示例化一个对象的时候，其`prototype`属性所指向的对象，会作为示例化对象的原型。示例化对象有一个`__proto__`属性(部分浏览器支持)，指向其原型。
 
 ```javascript
 function Person() {}
-const jack = new Person()
-console.log(jack.__proto__ === Person.prototype) // true
+
+const jack = new Person();
+
+console.log(jack.__proto__ === Person.prototype); // true
 ```
 
 构造函数、原型对象、实例对象，三者之间的关系如图：
@@ -25,31 +29,74 @@ console.log(jack.__proto__ === Person.prototype) // true
 `Object.create`方法接受一个对象或者`null`作为参数。如果参数为有效的对象，那么这个参数对象将作为该方法生成的对象的原型。
 
 ```javascript
-const a = {}
-const b = Object.create(a)
-console.log(b.__proto__ === a) // true
+const a = {};
+
+const b = Object.create(a);
+
+console.log(b.__proto__ === a); // true
 ```
 
 如果参数为`null`，我们可以打印一下看看，对象的原型是什么：
 
 ```javascript
-const a = Object.create(null)
-console.log(a.__proto__)  // undefined
+const a = Object.create(null);
+
+console.log(a.__proto__); // undefined
 ```
 
-为啥`Object.create(null)`创建的对象没有原型对象呢？其实，这与`__proto__`有关，下面会提到。
+为啥`Object.create(null)`创建的对象没有原型对象呢？其实不是这个对象没有原型，而是这个对象没有任何属性：
+![纯对象](https://github.com/quanshubli/blog/blob/main/images/原型3.jpg)
+
+那么这个对象的原型是谁呢？答案是`null`
 
 ## 字面量
 
-我们直接通过字面量定义的对象，它的原型对象有是谁呢？是`Object.prototype`。
+我们直接通过字面量定义的对象，它的原型对象又是谁呢？是`Object.prototype`。
 
 ```javascript
-const a = {}
-console.log(a.__proto__ === Object.prototype) // true
+const a = {};
+
+console.log(a.__proto__ === Object.prototype); // true
 ```
 
 其实，通过字面量方式创建空对象，就等同于`Object.create(Object.prototype)`。
 
-## __proto__
+## `__proto__`
 
+关于`__proto__`，MDN 上是这么描述的：
 
+> 已废弃: 该特性已经从 Web 标准中删除，虽然一些浏览器目前仍然支持它，但也许会在未来的某个时间停止支持，请尽量不要使用该特性。
+> 警告: 当`Object.prototype.__proto__ `已被大多数浏览器厂商所支持的今天，其存在和确切行为仅在 ECMAScript 2015 规范中被标准化为传统功能，以确保 Web 浏览器的兼容性。为了更好的支持，建议只使用 `Object.getPrototypeOf()`。
+
+可以看到，`__proto__`是一个被抛弃的特性，目前只有部分浏览器仍然支持。官方建议，通过`Object.getPrototypeOf()`来获取对象的原型。
+
+```javascript
+console.log(Object.getPrototypeOf({}) === Object.prototype); // true
+```
+
+实际上，在 js 内部实现当中，有一个内置属性指向了对象的原型: `[[prototype]]`。而这个属性我们开发者是无法访问的，但是可以在浏览器控制台中看到。
+![[[prototype]]](https://github.com/quanshubli/blog/blob/main/images/原型2.jpg)
+
+通过`Object.create(null)`创建的对象，我们访问不到它的`__proto__`属性，但是可以通过`Object.getPrototypeOf()`方法获取它的原型：
+
+```javascript
+console.log(Object.getPrototypeOf(Object.create(null))); // null
+```
+
+## 原型链
+
+当我们访问一个对象的属性时，如果在对象找不到这个属性，js 会从对象的原型对象中找。
+
+```javascript
+function Person() {}
+
+Person.prototype.type = 'person';
+
+const person = new Person();
+
+console.log(person.type); // 'person'
+```
+
+如果仍然找不到，就从原型对象的原型中找，因为原型也是对象，它也有原型。这就形成了原型链。
+
+我们可以把通过`Object.create(null)`创建的对象看作是“纯对象”，“纯对象”没有原型。而除了“纯对象”，其他所有对象的原型链都可以追溯到`Object.prototype`，而`Object.prototype`的原型就是`null`。也就是说，原型链的终点是`null`或者“纯对象”。
