--- a/articles/javascript/原型.md
+++ b/articles/javascript/原型.md
@@ -21,6 +21,7 @@ console.log(jack.__proto__ === Person.prototype); // true
 ```
 
 构造函数、原型对象、实例对象，三者之间的关系如图：
+
 ![构造函数、原型对象、示例对象关系图](https://github.com/quanshubli/blog/blob/main/images/原型1.jpg)
 
 ## Object.create()
@@ -45,6 +46,7 @@ console.log(a.__proto__); // undefined
 ```
 
 为啥`Object.create(null)`创建的对象没有原型对象呢？其实不是这个对象没有原型，而是这个对象没有任何属性：
+
 ![纯对象](https://github.com/quanshubli/blog/blob/main/images/原型3.jpg)
 
 那么这个对象的原型是谁呢？答案是`null`
@@ -75,6 +77,7 @@ console.log(Object.getPrototypeOf({}) === Object.prototype); // true
 ```
 
 实际上，在 js 内部实现当中，有一个内置属性指向了对象的原型: `[[prototype]]`。而这个属性我们开发者是无法访问的，但是可以在浏览器控制台中看到。
+
 ![[[prototype]]](https://github.com/quanshubli/blog/blob/main/images/原型2.jpg)
 
 通过`Object.create(null)`创建的对象，我们访问不到它的`__proto__`属性，但是可以通过`Object.getPrototypeOf()`方法获取它的原型：
@@ -98,5 +101,7 @@ console.log(person.type); // 'person'
 ```
 
 如果仍然找不到，就从原型对象的原型中找，因为原型也是对象，它也有原型。这就形成了原型链。
+
+![原型链](https://github.com/quanshubli/blog/blob/main/images/原型4.jpg)
 
 我们可以把通过`Object.create(null)`创建的对象看作是“纯对象”，“纯对象”没有原型。而除了“纯对象”，其他所有对象的原型链都可以追溯到`Object.prototype`，而`Object.prototype`的原型就是`null`。也就是说，原型链的终点是`null`或者“纯对象”。
