add: 构造函数继承

--- a/articles/javascript/继承.md
+++ b/articles/javascript/继承.md
@@ -41,3 +41,19 @@ const child2 = new Child()
 
 console.log(child2.names)  // ['jack', 'joe', 'jimmy']
 ```
+
+## 构造函数继承
+
+```javascript
+function Parent() {
+  this.names = ['jack', 'joe']
+}
+
+function Child() {
+  Parent.call(this)
+}
+```
+
+### 缺点
+
+1. 父类方法无法共用
