--- a/articles/javascript/继承.md
+++ b/articles/javascript/继承.md
@@ -12,6 +12,7 @@ Parent.prototype.getName = function() {
 
 function Child() {}
 Child.prototype = new Parent()
+Child.prototype.constructor = Child
 
 const a = new Child()
 
@@ -21,7 +22,7 @@ console.log(a.getName())  // 'parent'
 ### 缺点
 
 1. 创建Child的实例时，无法给Parent传参。
-2. Child的实例共享Parent上的引用类型属性。举例：
+2. Child的实例共享Parent实例上的引用类型属性。举例：
 
 ```javascript
 function Parent() {
@@ -56,4 +57,118 @@ function Child() {
 
 ### 缺点
 
-1. 父类方法无法共用
+1. 只能继承父类的实例属性和方法，无法继承父类原型上的属性和方法
+2. 父类的实例方法在每次创建子类实例时都会生成一份
+
+## 组合继承
+
+```javascript
+function Parent(name) {
+  this.name = name
+}
+Parent.prototype.getName = function() {
+  return this.name
+}
+
+function Child() {
+  // 可以给父类传参
+  Parent.call(this, 'child')
+}
+Child.prototype = new Parent()
+Child.prototype.constructor = Child
+```
+
+### 优点
+
+1. 能给父类传参
+2. 父类实例上的引用类型属性不会被子类的实例共享
+3. 子类实例可以共用父类的原型方法
+
+### 缺点
+
+1. 父类的实例属性会被创建多次，造成资源浪费。比如：
+
+```javascript
+function Child() {
+  Parent.call(this)
+}
+Child.prototype = new Parent() // 第一次
+
+const child1 = new Child()  // 第二次
+```
+
+## 原型式继承
+
+```javascript
+function object(o) {
+  function F() {}
+  F.prototype = o
+  return new F()
+}
+```
+
+### 缺点
+
+与原型链继承类似
+
+## 寄生式继承
+
+寄生式继承可以看作是原型式继承的增强。
+
+```javascript
+function createAnother(origin) {
+  const o = object(origin)
+  o.someFunc = () => {}
+  return o
+}
+```
+
+## 寄生组合式继承
+
+```javascript
+function Parent() {
+  this.name = 'parent'
+}
+Parent.prototype.getName = function() {
+  return this.name
+}
+
+function Child() {
+  Parent.call(this)
+}
+
+// object 方法可以用 Object.create() 代替
+Child.prototype = object(Parent.prototype)
+Child.prototype.constructor = Child
+```
+
+寄生组合式继承能够解决以上继承方式的问题，是一种比较完美的继承方式。
+## ES6继承
+
+ES6新增的特性`class`表示类，通过`extends`实现继承。
+
+```javascript
+class Parent{}
+
+class Child extends Parent{}
+```
+
+其实现与寄生组合式继承相同。区别在于子类示例化时，继承父类实例属性的方式。
+
+* ES5的继承是先将`this`指向子类的实例对象（`new`的机制），然后通过调用父类构造函数的`call`方法，将属性赋值给子类实例对象。
+
+```javascript
+function Child() {
+  Parent.call(this)
+}
+```
+
+* ES6的继承则是先在`constuctor`构造器中调用`super`方法，将父类实例属性保存到子类`this`中，然后在将`this`指向子类的实例对象。
+
+```javascript
+class Child extends Parent {
+  constructor() {
+    super()
+  }
+}
+```
