--- a/articles/javascript/继承.md
+++ b/articles/javascript/继承.md
@@ -1,5 +1,11 @@
 # 继承
 
+JavaScript本身没有继承的机制，所谓的js中的继承本质上是通过原型或构造函数来实现的。
+
+ES6中的类的语法糖`class A extends B`，实质上也是基于原型和构造函数实现的。
+
+以下是各类继承实现方式的概述。
+
 ## 原型链继承
 
 ```javascript
